...
    tools:context=".ui.CreateAlbumFragment"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginTop="20dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/albumname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/albumNameTitle"
        android:gravity="center"
        app:theme="@style/EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text" />

    <EditText
        android:id="@+id/albumcover"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/albumCoverURLTitle"
        android:gravity="center"
        app:theme="@style/EditText"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumname"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/albumdescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/albumDescriptionTitle"
        android:gravity="center"
        app:theme="@style/EditText"
        android:inputType="text"
...
        android:text="@string/fecha_lanz_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumdescription" />

    <EditText
        android:id="@+id/albumRelease"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/albumdateformat"
        android:gravity="center"
        android:layout_marginTop="2dp"
...
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/recordLabels"
        android:layout_marginTop="2dp" />
    </LinearLayout>
    <Button
        android:id="@+id/crearAlbumBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAlbum"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
