<resources>
    <string name="app_name">Vinilos</string>
    <string name="coleccionistas">Coleccionistas</string>
    <string name="telefono_det_coleccionista">Teléfono</string>
    <string name="correo_det_coleccionista">Correo</string>
    <string name="albumes">Álbumes</string>
    <string name="tialbumes">Álbumes para tí</string>
    <string name="artistas">Artistas</string>
    <string name="fecha_det_artista">Fecha nacimiento</string>
    <string name="tiartistas">Artistas para tí</string>
    <string name="casa_disco_title">Casa discográfica</string>
    <string name="fecha_lanz_title">Fecha de Lanzamiento</string>
    <string name="genero_title">Género</string>
    <string name="albumdateformat">día/mes/año</string>
    <string name="createAlbum">Crear Álbum</string>
    <string name="albumNameTitle">Nombre del Álbum</string>
    <string name="albumDescriptionTitle">Descripción del álbum</string>
    <string name="albumRecordLabelSelectorTitle">Disquera</string>
    <string name="albumCoverURLTitle">URL Portada álbum</string>
    <string name="asociar">Asociar</string>
    <string name="asociar_tracks">Asociar tracks</string>
    <string name="txt_no_tracks">No hay tracks asociados a este álbum</string>
    <string name="tracks">Tracks</string>
    <string name="duracion">Duración del álbum</string>
    <string name="nombrecancion">Nombre de la canción</string>
    <string name="signoigual">:</string>
    <string name="segundos">Segundos</string>
    <string name="minutos">Minutos</string>
    <string name="listaalbumes">Lista de Álbumes</string>
...
