<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="album" type="com.example.vinilosandroid.models.Album" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TrackFragment"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleAsociar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp"
                android:text="@{album.name}"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/txtTrackName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/nombrecancion"
                android:gravity="center"
                app:theme="@style/EditText"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleAsociar" />
            <TextView
                android:id="@+id/titleDuracion"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/duracion"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/txtTrackName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="parent"/>

            <EditText
                android:id="@+id/txtMinutos"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/minutos"
                android:inputType="number"
                android:gravity="center"
                app:theme="@style/EditText"
                app:layout_constraintTop_toBottomOf="@id/titleDuracion"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/signoigual"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:text="@string/signoigual"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/titleDuracion"
                app:layout_constraintRight_toLeftOf="@id/txtSegundos"
                app:layout_constraintLeft_toRightOf="@id/txtMinutos"/>

            <EditText
                android:id="@+id/txtSegundos"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/segundos"
                android:inputType="number"
                app:theme="@style/EditText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleDuracion" />

            <Button
                android:id="@+id/btnasociar"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/asociar"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/txtMinutos"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/botonasociar"/>

            <TextView
                android:id="@+id/txt_no_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_no_tracks"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnasociar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracks_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/txt_no_comments"
                tools:listitem="@layout/track_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>