...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:text="@{album.name}"
                android:textSize="30sp"
                android:textStyle="bold"
...
